{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "MovingActions",
            "id": "d72361e7-53d0-491c-9b53-6274c619fd33",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "313aca11-b3b8-426e-aa26-3f967326ba03",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "c2bcdb25-cc4c-48f6-91f1-59b0def56aa3",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "097672ce-76c3-4f53-8843-2f2a8a2d9a93",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fc65ba17-5f68-49c9-81d1-b1a7f48b6859",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "529b087e-5555-4a98-a945-780ddaf4acb1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d3af4c45-4482-46f4-a3f4-3f3d52e186b7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ShootingActions",
            "id": "ca50a692-1c28-4fdc-aeff-706273a9f291",
            "actions": [
                {
                    "name": "PrimaryShoot",
                    "type": "Button",
                    "id": "49c496f9-73f3-4aab-b629-029359b6d3c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryShoot",
                    "type": "Button",
                    "id": "d47f1569-f2cf-499e-bdeb-1d1af8595d11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "054fe4d4-ba10-45cd-80ae-5dbc9a27ca32",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f139649b-9e0a-44c2-b461-153d8d0b07f0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}